<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImg"
        style="@style/round_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:scaleType="center"
        android:src="@drawable/ic_launcher_background"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/songname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/item_song_name"
            android:textSize="17sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/songAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_song_album"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_song_duration"
        android:layout_gravity="center_vertical"
        tools:ignore="NestedWeights" />
</LinearLayout>
