<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/favourite_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableTop="@drawable/heart"
        android:text="@string/favourite_button"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/playlist_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shuffle_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shuffle_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawableTop="@drawable/shuffle"
        android:text="@string/shuffle_button"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/favourite_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playlist_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:drawableTop="@drawable/play_list"
        android:text="@string/playlist_button"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/favourite_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="18dp"
        android:background="@color/red"
        android:fontFamily="@font/italic"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourite_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_count" />
</androidx.constraintlayout.widget.ConstraintLayout>